# prefabs

./: .gitignore  CMakeLists.txt  Doxyfile  DoxygenFix.js  DoxygenHeader.html  DoxygenStyle.css  LICENSE  README.md  Rakefile
cmake/: PreformConfig.cmake.in
dep/include/preform/: raytest_disk.hpp
depr/include/preform/: raytest_aabb.hpp  raytest_triangle.hpp
depr/src/test/: raytest_triangle.cpp
docs/: _config.yml  about.md  coding_conventions.md  index.md
docs/_includes/: copy.html  head.html
docs/doxygen/html/: DoxygenStyle.css  annotated.html  classes.html  classpr_1_1aabb-members.html  classpr_1_1aabb.html  classpr_1_1aabb__inherit__graph.map  classpr_1_1aabb__inherit__graph.md5  classpr_1_1aabbtree-members.html  classpr_1_1aabbtree.html  classpr_1_1aabbtree_1_1node__type-members.html  classpr_1_1aabbtree_1_1node__type.html  classpr_1_1aabbtree_1_1proxy__type-members.html  classpr_1_1aabbtree_1_1proxy__type.html  classpr_1_1aligned__allocator-members.html  classpr_1_1aligned__allocator.html  classpr_1_1bernoulli__distribution-members.html  classpr_1_1bernoulli__distribution.html  classpr_1_1binomial__distribution-members.html  classpr_1_1binomial__distribution.html  classpr_1_1block__array2-members.html  classpr_1_1block__array2.html  classpr_1_1block__array2__inherit__graph.map  classpr_1_1block__array2__inherit__graph.md5  classpr_1_1block__array3-members.html  classpr_1_1block__array3.html  classpr_1_1block__array3__inherit__graph.map  classpr_1_1block__array3__inherit__graph.md5  classpr_1_1bspline__curve-members.html  classpr_1_1bspline__curve.html  classpr_1_1bspline__patch-members.html  classpr_1_1bspline__patch.html  classpr_1_1delaunay__triangulation-members.html  classpr_1_1delaunay__triangulation.html  classpr_1_1delaunay__triangulation_1_1edge__triangles__type-members.html  classpr_1_1delaunay__triangulation_1_1edge__triangles__type.html  classpr_1_1delaunay__triangulation_1_1edge__type-members.html  classpr_1_1delaunay__triangulation_1_1edge__type.html  classpr_1_1delaunay__triangulation_1_1triangle__type-members.html  classpr_1_1delaunay__triangulation_1_1triangle__type.html  classpr_1_1dense__iterator-members.html  (+1247 more)
example/src/: simplex_noise2.cpp  simplex_noise3.cpp  worley_noise2.cpp  worley_noise3.cpp
include/pr/: aabb.hpp  aabbtree.hpp  bash_format.hpp  block_array2.hpp  block_array3.hpp  color.hpp  dense_iterator.hpp  dense_matrix_view.hpp  dense_vector_view.hpp  dense_vector_view.inl.rb  dualnum.hpp  endian.hpp  float_atomic.hpp  float_interval.hpp  half.hpp  image2.hpp  image3.hpp  image_filters.hpp  interp.hpp  math.hpp  memory_arena.hpp  memory_arena_allocator.hpp  misc_float.hpp  misc_int.hpp  misc_string.hpp  multi.hpp  multi_math.hpp  multi_math.inl  multi_math.inl.rb  multi_misc_float.hpp  multi_misc_float.inl.rb  neumaier_sum.hpp  option_parser.hpp  periodic_noise_adapter1.hpp  periodic_noise_adapter2.hpp  quadmath.hpp  quat.hpp  random.hpp  range.hpp  running_stat.hpp  (+9 more)
include/prefabs/: aabb.hpp  aabbtree.hpp  bash_format.hpp  bit_helpers.hpp  block_array2.hpp  block_array3.hpp  dense_iterator.hpp  dense_matrix_view.hpp  dense_matrix_view.inl  dense_matrix_view.inl.rb  dense_vector_view.hpp  dense_vector_view.inl  dense_vector_view.inl.rb  distr.hpp  distributions.hpp  dualnum.hpp  dualnum.inl  dualnum.inl.rb  endian.hpp  float_atomic.hpp  float_bounds.hpp  float_helpers.hpp  half.hpp  image2.hpp  image3.hpp  int_helpers.hpp  interp.hpp  kctree.hpp  kdtree.hpp  math.hpp  math.inl  math.inl.rb  math.rb  memory_arena.hpp  memory_arena_allocator.hpp  multi.hpp  multi.inl  multi.inl.rb  multi.rb  multi_float_helpers.hpp  (+19 more)
include/preform/: aabb.hpp  aabbtree.hpp  aligned_allocator.hpp  bash_format.hpp  blas.hpp  block_array2.hpp  block_array3.hpp  bspline.hpp  byte_order.hpp  camera_ortho.hpp  camera_persp.hpp  color.hpp  color.inl  color.inl.rb  delaunay.hpp  dense_blas.hpp  dense_cla.hpp  dense_iterator.hpp  dense_linalg.hpp  dense_matrix_view.hpp  dense_matrix_view.inl  dense_matrix_view.inl.rb  dense_vector_view.hpp  dense_vector_view.inl  dense_vector_view.inl.rb  distributions.hpp  dualnum.hpp  dualnum.inl  dualnum.inl.rb  endian.hpp  float_atomic.hpp  float_bounds.hpp  float_helpers.hpp  float_interval.hpp  fresnel.hpp  geometric_sampling.hpp  half.hpp  hittest.hpp  hittest_triangle.inl  image2.hpp  (+71 more)
src/: CMakeLists.txt
src/example/: CMakeLists.txt  image2_mipmap.cpp  image2_resample.cpp  microsurface_preview.cpp  periodic_simplex_noise2.cpp  periodic_worley_noise2.cpp  simple_scene.cpp  simplex_noise2.cpp  simplex_noise3.cpp  terminal_progess_bar.cpp  terminal_progress_bar.cpp  worley_noise2.cpp  worley_noise3.cpp
src/test/: CMakeLists.txt  aabbtree.cpp  byte_order.cpp  distribution.cpp  float_atomic.cpp  float_interval.cpp  half.cpp  medium.cpp  microsurface.cpp  quat.cpp  random.cpp  raytest_disk.cpp  raytest_sphere.cpp  raytest_triangle.cpp  running_stat.cpp
test/: microsurface.cpp
test/src/: microsurface.cpp
